--- a/css/common.css
+++ b/css/common.css
@@ -49,7 +49,7 @@ ul,li{
 #app,header,main,section{
 	position: relative;
 }
-#app,section{
+#app,main,section{
 	width: 100%;
 	height: 100%;
 	display: flex;
