--- a/play/2048/files/style2048.css
+++ b/play/2048/files/style2048.css
@@ -1,5 +1,19 @@
 html,body{
+	width: 100%;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+	background-color: #483C6C;
 	overflow: hidden;
+}
+#app{
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	justify-content: center;
+	align-items: center;
 }
 .bg{
 	width: 100%;
