--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,99 @@
-section{
-	margin-top: 5.125rem;
+header{
+	width: 100%;
+	position: relative;
+	margin-top: 3.75rem;
+	padding: 0 3.75rem;
+	justify-content: space-between;
+	align-items: center;
+	box-sizing: border-box;
+}
+.logo{
+	align-items: center;
+	position: relative;
+}
+.logo-img{
+	width: 2.5rem;
+	position: relative;
+}
+.logo-img img{
+	width: 100%;
+}
+.logo-name{
+	font-size: 1.125rem;
+	font-weight: 900;
+	margin-left: 1.25rem;
+}
+nav a{
+	font-family: 'Noto Serif SC';
+	font-weight: 700;
+	color: var(--main-color);
+	letter-spacing: 0.125rem;
+	margin-right: 3rem;
+	position:relative;
+	cursor: pointer;
+}
+nav a:last-child{
+	margin-right: 0;
+}
+.nav-a:after{
+  content:"";
+  width:0;
+  height:2px;
+  background-color:var(--main-color);
+	background: var(--bg-gradient);
+  position:absolute;
+	top: 24px;
+  right:0;
+  bottom:0px;
+  transition:width 0.6s;
+}
+.nav-a:hover:after{
+  width:100%;
+  left:0;
+}
+/*通用蓝色玻璃*/
+.blue-box{
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+	z-index: 0;
+}
+.blue-box::before{
+	content: '';
+	width: 25rem;
+	height: 25rem;
+	border-radius: 50%;
+	background-color: #37AFCA;
+	position: absolute;
+	top: 15rem;
+	left: 3.75rem;
+	z-index: -2;
+	animation: blue-eff 14s linear infinite;
+}
+.blue-box::after{
+	content: '';
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255,255,255,0.7);
+	backdrop-filter: blur(200px);
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+@keyframes blue-eff{
+	0%{
+		top: 15rem;
+		left: 3.75rem;
+	}
+	50%{
+		top: 40rem;
+		left: 40rem;
+	}
+	100%{
+		top: 15rem;
+		left: 3.75rem;
+	}
 }
 
 /** 自适应 **/
