--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,9 @@
 :root{
 	--main-color: rgba(0,0,0,0.9);
+	--second-color: rgba(0,0,0,0.7);
 	--gray-color: rgba(0,0,0,0.5);
-	--border-radius: 6px;
+	--border-color: rgba(0,0,0,0.2);
+	--border-radius: 7px;
 	--bg-gradient: linear-gradient(90deg, #37AFCA 0%, #DE74CC 52%, #F89C6C 100%);
 }
 *{
@@ -25,6 +27,10 @@ body,html{
 	font-family: 'Noto Sans SC';
 	font-weight: 400;
 	line-height: 1;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 a{
 	text-decoration: none;
