--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ nav a:last-child{
   background-color:var(--main-color);
 	background: var(--bg-gradient);
   position:absolute;
-	top: 24px;
+	top: -4px;
   right:0;
   bottom:0px;
   transition:width 0.6s;
@@ -52,13 +52,13 @@ nav a:last-child{
   left:0;
 }
 /*通用蓝色玻璃*/
-.blue-box{
+.blue-box,.red-box{
 	width: 100%;
 	position: relative;
 	overflow: hidden;
 	z-index: 0;
 }
-.blue-box::before{
+.blue-box::before,.red-box::before{
 	content: '';
 	width: 25rem;
 	height: 25rem;
@@ -70,7 +70,7 @@ nav a:last-child{
 	z-index: -2;
 	animation: blue-eff 14s linear infinite;
 }
-.blue-box::after{
+.blue-box::after,.red-box::after{
 	content: '';
 	width: 100%;
 	height: 100%;
@@ -83,18 +83,243 @@ nav a:last-child{
 }
 @keyframes blue-eff{
 	0%{
-		top: 15rem;
+		top: 10rem;
 		left: 3.75rem;
 	}
-	50%{
-		top: 40rem;
-		left: 40rem;
+	20%{
+		top: 20rem;
+		left: 20rem;
+	}
+	40%{
+		top: 30rem;
+		left: 60rem;
+	}
+	60%{
+		top: 20rem;
+		left: 100rem;
 	}
 	100%{
-		top: 15rem;
+		top: 10rem;
 		left: 3.75rem;
 	}
 }
+.red-box::before{
+	background-color: #DE74CC;
+	top: 5rem;
+	right: 3.75rem;
+	animation: red-eff 14s linear infinite;
+}
+@keyframes red-eff{
+	0%{
+		top: 5rem;
+		right: 3.75rem;
+	}
+	20%{
+		top: 20rem;
+		right: 20rem;
+	}
+	40%{
+		top: 40rem;
+		right: 60rem;
+	}
+	60%{
+		top: 20rem;
+		right: 100rem;
+	}
+	100%{
+		top: 5rem;
+		right: 3.75rem;
+	}
+}
+.footer{
+	width: 100%;
+	font-family: 'Noto Serif SC';
+	font-size: 0.75rem;
+	color: var(--second-color);
+	position: relative;
+	padding: 2.5rem 3.75rem;
+	background-color:#DE74CC;
+	background: linear-gradient(90deg, rgba(55, 175, 202, 0.1) 0%, rgba(222, 116, 204, 0.1) 52%, rgba(248, 156, 108, 0.1) 100%);
+	justify-content: space-between;
+	align-items: center;
+	box-sizing: border-box;
+}
+.about-info a{
+	color: var(--second-color);
+	cursor: pointer;
+	margin-right: 1.5rem;
+}
+.about-info a:last-child{
+	margin-right: 0;
+}
+.site-beian a{
+	color: var(--second-color);
+	cursor: pointer;
+	margin-left: 1.5rem;
+}
+.about-info a:hover,.site-beian a:hover{
+	color: #DE74CC;
+}
+
+/** 实验page **/
+.test-banner{
+	width: 100%;
+	margin-top: 6.25rem;
+	position: relative;
+	justify-content: center;
+}
+.cube-box52{
+  width:400px;
+  height:400px;
+  position:relative;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  transform-style:preserve-3d;
+  transform:rotateX(-10deg);
+}
+.cube-box52:after,.cube-box52:before{
+  content:"";
+  width:2px;
+  height:40px;
+  position:absolute;
+  left: 100px;
+  background:linear-gradient(180deg,rgba(4,222,248,0.7) 0%,rgba(127,255,212,0) 100%);
+  animation:movetop52 4s linear infinite;
+}
+.cube-box52:before{
+  left:300px;
+  background:linear-gradient(180deg,rgba(255,225,33,0.7) 0%,rgba(255,225,33,0) 100%);
+  animation-delay:2s;
+}
+@keyframes movetop52{
+  0%{
+		bottom:0px;
+	}
+	100%{
+		bottom:230px;
+		height:0;
+	}
+}
+.cube52{
+  width:130px;
+  height:100px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  transform-style:preserve-3d;
+	transform: translateY(-10px);
+  animation:spin52 4s linear infinite;
+}
+@keyframes spin52{
+  0{
+		transform:translateY(-10px) rotateY(0deg);
+	}
+	50%{
+		transform:translateY(-30px) rotateY(180deg);
+	}
+	100%{
+		transform:translateY(-10px) rotateY(360deg);
+	}
+}
+.cube52 > div{
+  width:120px;
+  height:120px;
+  clip-path:polygon(50% 0%,0 100%,100% 100%);
+  background:conic-gradient(from 180deg at 50% 50%,#7FFFD4 0deg,#045AF8 59deg,#EA04F8 149deg,#FFE121 219deg,#04DEF8 301deg,#7FFFD4 360deg);
+  position:absolute;
+  transform-origin:center top;
+}
+.cube52 div:nth-of-type(1){
+  background-color:rgba(4,222,248,0.7);
+  transform:rotateZ(-30deg) rotateY(90deg);
+}
+.cube52 div:nth-of-type(2){
+  background-color:rgba(234,4,248,0.7);
+  transform:rotateZ(30deg) rotateY(90deg);
+}
+.cube52 div:nth-of-type(3){
+  background-color:rgba(127,255,212,0.7);
+  transform:rotateX(30deg);
+}
+.cube52 div:nth-of-type(4){
+  background-color:rgba(4,90,248,0.7);
+  transform:rotateX(-30deg);
+}
+.cube52 div:nth-of-type(5){
+  clip-path:none;
+  background-color:rgba(255,225,33,0.7);
+  transform:rotateX(90deg) translateY(-60px) translateZ(-104px);
+}
+.cube-box52 .cube52:nth-of-type(2){
+  transform:rotateX(180deg) translateY(-10px);
+  animation:spin52b 4s linear infinite;
+}
+@keyframes spin52b{
+  0{
+		transform:rotateX(180deg) translateY(-10px) rotateY(0deg);
+	}
+	50%{
+		transform:rotateX(180deg) translateY(-30px) rotateY(180deg);
+	}
+	100%{
+		transform:rotateX(180deg) translateY(-10px) rotateY(360deg);
+	}
+}
+.test-title{
+	width: 400px;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.test-title ul{
+	width: 12.5rem;
+	flex-direction: column;
+	justify-content: center;
+}
+.test-title-name{
+	font-family: 'Noto Serif SC';
+	font-size: 2.5rem;
+	font-weight: 900;
+}
+.test-title-info{
+	font-family: 'Noto Sans SC';
+	font-size: 0.875rem;
+	font-weight: 400;
+	margin-top: 1rem;
+}
+.web-pro-title,.web-pro-title ul{
+	width: 100%;
+	position: relative;
+	margin-top: 6.25rem;
+	justify-content: center;
+	align-items: center;
+}
+.web-pro-title ul{
+	flex-direction: column;
+	margin-top: 0;
+}
+.web-pro-list{
+	width: 100%;
+	padding: 0 3.75rem;
+}
+.web-pro-item{
+	width: calc(100% / 4);
+	height: 18.75rem;
+	position: relative;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	transition: background-color 0.3s linear;
+	cursor: pointer;
+}
+.web-pro-item:hover{
+	background-color: rgba(248, 156, 108, 0.1);
+}
+
+
+
 
 /** 自适应 **/
 @media screen and (max-width:768px){
