--- a/css/style.css
+++ b/css/style.css
@@ -484,6 +484,7 @@ nav a:last-child{
 }
 .dev-item-name{
 	margin-top: 2.5rem;
+	height: 3.375rem;
 }
 .item-bottom-info{
 	justify-content: space-between;
