--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 header{
 	width: 100%;
 	position: relative;
-	margin-top: 3.75rem;
-	padding: 0 3.75rem;
+	padding: 3.75rem 3.75rem;
 	justify-content: space-between;
 	align-items: center;
 	box-sizing: border-box;
