--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 header{
 	width: 100%;
 	position: relative;
-	padding: 3.75rem 3.75rem;
+	padding: 3.75rem;
 	justify-content: space-between;
 	align-items: center;
 	box-sizing: border-box;
@@ -659,6 +659,9 @@ li.money-tag{
 
 /** 自适应 **/
 @media screen and (max-width:768px){
+	head{
+		padding: 1.875rem;
+	}
 	.dev-item,.design-item,.web-pro-item{
 		width: 100%;
 	}
