--- a/css/style.css
+++ b/css/style.css
@@ -502,8 +502,8 @@ li.info-img-box{
 	width: 100%;
 }
 li.money-tag{
-	width: 60px;
-	padding: 6px 10px;
+	width: 3.75rem;
+	padding: 0.375rem 0.625rem!important;
 	font-size: 0.75rem;
 	color: #ffffff;
 	text-align: center;
@@ -659,16 +659,33 @@ li.money-tag{
 
 /** 自适应 **/
 @media screen and (max-width:768px){
-	head{
+	header{
 		padding: 1.875rem;
+	}
+	nav a{
+		margin-right: 1.5rem;
+	}
+	.test-title-name{
+		font-size: 2.25rem;
+	}
+	.class-tab{
+		margin-bottom: 3.75rem;
+	}
+	.item-list{
+		padding: 0 1.875rem;
 	}
 	.dev-item,.design-item,.web-pro-item{
 		width: 100%;
 	}
+	.dev-item li{
+		padding: 0 1.5rem;
+	}
 	.tab-maker{
+		padding: 10px;
+		margin: 0 8px;
 		font-size: 14px;
 	}
-	.logo-name,.about-info{
+	.logo-name,.about-info,.blue-box{
 		display: none;
 	}
 	.footer{
