--- a/play/2048/files/style2048.css
+++ b/play/2048/files/style2048.css
@@ -15,6 +15,26 @@ html,body{
 	justify-content: center;
 	align-items: center;
 }
+.logo{
+	display: flex;
+	align-items: center;
+	position: absolute;
+	left: 2.5rem;
+	top: 2.5rem;
+	color: rgba(0,0,0,0.9);
+	text-decoration: none;
+	z-index: 10;
+}
+.logo-img{
+	width: 2.5rem;
+	position: relative;
+	font-size: 0;
+}
+.logo-name{
+	font-size: 1.125rem;
+	font-weight: bold;
+	margin-left: 1.25rem;
+}
 .bg{
 	width: 100%;
 	height: 100vh;
@@ -258,6 +278,10 @@ html,body{
 	box-sizing: border-box;
 }
 @media screen and (max-width:960px){
+	.logo{
+		top: 1.875rem;
+		left: 1.875rem;
+	}
 	.ewm-box,.ewm-box-2,.arrow-box{
 		display: none;
 	}
