--- a/css/style.css
+++ b/css/style.css
@@ -677,7 +677,7 @@ li.money-tag{
 	.dev-item,.design-item,.web-pro-item{
 		width: 100%;
 	}
-	.dev-item li{
+	.dev-item li,.design-item li:nth-child(2),.design-item li:nth-child(3){
 		padding: 0 1.5rem;
 	}
 	.tab-maker{
