--- a/css/common.css
+++ b/css/common.css
@@ -56,6 +56,16 @@ ul,li{
 .lh1-5{
 	line-height: 1.5;
 }
+.p-center{
+	text-align: center;
+}
+.t-bold{
+	font-weight: bold;
+}
+.t-info-c{
+	color: #DE74CC;
+}
+
 
 /* 滚动条样式 */
 ::-webkit-scrollbar {
