--- a/css/style.css
+++ b/css/style.css
@@ -621,6 +621,7 @@ li.money-tag{
 	margin-top: 2.5rem;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 }
 .tab-maker{
 	padding: 10px 16px;
